--- a/riverdi-nucleo-3-50.ioc
+++ b/riverdi-nucleo-3-50.ioc
@@ -134,6 +134,7 @@ MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -206,8 +207,10 @@ PE2.Mode=OCTOSPI1_IO[3\:0]
 PE2.Signal=OCTOSPI1_IO2
 PE4.Locked=true
 PE4.Signal=FMC_A20
-PE5.GPIOParameters=GPIO_Label
+PE5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE5.GPIO_Label=CTP_INT
+PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE5.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
 PE5.Signal=GPXTI5
 PE6.GPIOParameters=GPIO_Label
@@ -258,8 +261,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=TESTNUCLEO2.ioc
-ProjectManager.ProjectName=TESTNUCLEO2
+ProjectManager.ProjectFileName=riverdi-nucleo-3-50.ioc
+ProjectManager.ProjectName=riverdi-nucleo-3-50
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -268,7 +271,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_ICACHE_Init-ICACHE-false-HAL-true,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_SPI1_Init-SPI1-false-HAL-true,14-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2-false-HAL-false,15-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_ICACHE_Init-ICACHE-false-HAL-true,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_SPI1_Init-SPI1-false-HAL-true,12-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.24.0-false-HAL-false,13-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.24.0-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=250000000
 RCC.AHBFreq_Value=250000000
 RCC.APB1Freq_Value=250000000
@@ -404,7 +407,7 @@ SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-TOUCHGFX.4.24.0.ApplicationCcGraphicsJjApplication=TouchGFXOoGenerator
 STMicroelectronics.X-CUBE-TOUCHGFX.4.24.0.GraphicsJjApplication_Checked=true
-STMicroelectronics.X-CUBE-TOUCHGFX.4.24.0.IPParameters=ApplicationCcGraphicsJjApplication,tgfx_display_interface,tgfx_custom_width,tgfx_custom_height
+STMicroelectronics.X-CUBE-TOUCHGFX.4.24.0.IPParameters=tgfx_display_interface,tgfx_custom_width,tgfx_custom_height,ApplicationCcGraphicsJjApplication
 STMicroelectronics.X-CUBE-TOUCHGFX.4.24.0.tgfx_custom_height=320
 STMicroelectronics.X-CUBE-TOUCHGFX.4.24.0.tgfx_custom_width=480
 STMicroelectronics.X-CUBE-TOUCHGFX.4.24.0.tgfx_display_interface=disp_fmc
